added helps for filter effect tags and include vignette for filter effects

--- a/README.Rmd
+++ b/README.Rmd
@@ -95,6 +95,7 @@ image_read("man/figures/logo.png")
 * [Some pretty (?) animated geometry](https://coolbutuseless.github.io/package/minisvg/articles/geometry-example.html)
 * [Creating and Animating the carpet from The Overlook Hotel in The Shining](https://coolbutuseless.github.io/package/minisvg/articles/carpet-01.html)
 * [Creating and Animating the a seventies wallpaper pattern](https://coolbutuseless.github.io/package/minisvg/articles/wallpaper-01.html)
+* [Some example of filter usage](https://coolbutuseless.github.io/package/minisvg/articles/filter-effects)
 
 ## Installation
 
