--- a/vignettes/filter-effects.Rmd
+++ b/vignettes/filter-effects.Rmd
@@ -238,7 +238,8 @@ doc <- svg_doc(
   stag$rect(
     x      = 0, 
     y      = 0, 
-    height = "100%", 
+    height = 250,
+    width  = 250,
     filter = "url(#noise)", 
     fill   = 'none')
 )
