--- a/vignettes/styling-with-css.Rmd
+++ b/vignettes/styling-with-css.Rmd
@@ -45,17 +45,17 @@ doc$rect(class = 'rect-two', x = 130, y=20, width=80, height=60)
 # Add a CSS style block to the SVG document. CSS definitions will override
 # any inline definitions defined above
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-doc$inline_css("
+doc$add_css("
 #myrect {
   fill: green;
-}
+}")
 
+doc$add_css("
 .rect-two {
   stroke: black;
   fill-opacity: 0.2;
   stroke-width: 4;
-}
-")
+}")
 
 ```
 
@@ -112,7 +112,7 @@ writeLines(css, "css/external.css")
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # Link the external CSS file into the SVG
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-doc$external_css_url("css/external.css")
+doc$add_css_url("css/external.css")
 ```
 
 
