--- a/README.Rmd
+++ b/README.Rmd
@@ -96,6 +96,7 @@ image_read("man/figures/logo.png")
 * [Creating and Animating the carpet from The Overlook Hotel in The Shining](https://coolbutuseless.github.io/package/minisvg/articles/carpet-01.html)
 * [Creating and Animating a 70s wallpaper pattern](https://coolbutuseless.github.io/package/minisvg/articles/wallpaper-01.html)
 * [Some examples of filter usage](https://coolbutuseless.github.io/package/minisvg/articles/filter-effects)
+* [Adding javascript to an SVG](https://coolbutuseless.github.io/package/minisvg/articles/javascript-in-svg)
 
 ## Installation
 
