--- a/README.Rmd
+++ b/README.Rmd
@@ -67,6 +67,8 @@ library(minisvg)
 * [Creating and Animating a 70s wallpaper pattern](https://coolbutuseless.github.io/package/minisvg/articles/wallpaper-01.html)
 * [Some examples of filter usage](https://coolbutuseless.github.io/package/minisvg/articles/filter-effects)
 * [Adding javascript to an SVG](https://coolbutuseless.github.io/package/minisvg/articles/javascript-in-svg)
+* [Specifying coordinates for polygons and polylines](https://coolbutuseless.github.io/package/minisvg/articles/specifying-coords-for-polygons-and-polylines)
+
 
 ## Installation
 
