Add SVGLiteral to insert raw SVG/HTML into SVG docs

--- a/README.Rmd
+++ b/README.Rmd
@@ -68,6 +68,7 @@ library(minisvg)
 * [Some examples of filter usage](https://coolbutuseless.github.io/package/minisvg/articles/filter-effects)
 * [Adding javascript to an SVG](https://coolbutuseless.github.io/package/minisvg/articles/javascript-in-svg)
 * [Specifying coordinates for polygons and polylines](https://coolbutuseless.github.io/package/minisvg/articles/specifying-coords-for-polygons-and-polylines)
+* [Inserting literal HTML into an SVG: MathML in an SVG](https://coolbutuseless.github.io/package/minisvg/articles/MathML-in-SVG)
 
 
 ## Installation
