--- a/README.Rmd
+++ b/README.Rmd
@@ -69,6 +69,7 @@ library(minisvg)
 * [Adding javascript to an SVG](https://coolbutuseless.github.io/package/minisvg/articles/javascript-in-svg)
 * [Specifying coordinates for polygons and polylines](https://coolbutuseless.github.io/package/minisvg/articles/specifying-coords-for-polygons-and-polylines)
 * [Inserting literal HTML into an SVG: MathML in an SVG](https://coolbutuseless.github.io/package/minisvg/articles/MathML-in-SVG)
+* [Editing an SVG](https://coolbutuseless.github.io/package/minisvg/articles/editing-svgs)
 
 
 ## Installation
